# youtube-intel-evidence-kit

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_CHANGELOG.md  LICENSE  PACKAGING_CLOSEOUT.md  PATCH_IMPLEMENTATION_REPORT.md  PUBLICATION_RISK_REVIEW.md  README.md  REVIEW_BRIEF_FOR_GPT_PRO.md  ROADMAP.md  SMOKE_TESTS.md  pyproject.toml  requirements.txt  youtube_ops_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: BOOTSTRAP_PROMPT.md  CLAIM_ASSEMBLY.md  CODEX_FOR_OSS_APPLICATION_DRAFT.md  CONCEPT_TO_ARTIFACT_MAP.md  COST_ROUTING_MATRIX.md  HESITATION_MARKERS.md  OPERATOR_LOOP.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_THESIS.md  PURPOSE.md  REAL_ENGINE_ROADMAP.md  SCOPE_BOUNDARY.md  WHY.md
docs/mcp_handoff/: AI_APP_MCP_HANDOFF.md  CODEX_USAGE.md  (+3 more)
examples/: synthetic_hesitation.json  synthetic_package.json  synthetic_segments.json  synthetic_transcript.vtt
schemas/: topic_collection.schema.json  video_knowledge_record.schema.json
scripts/: check_encoding.py  clean_generated_artifacts.py  public_release_leak_scan.py
src/: youtube_ops_cli.py
tests/: test_bootstrap_prompt_contract.py  test_claim_assembly_wiring.py  test_cli_user_flow.py  test_hesitation_markers.py  test_plugin_registry_v6_contract.py  test_public_mcp_handoff.py  test_public_release_leak_scan.py  test_public_smoke.py  test_public_usability_contract.py  test_quality_gate_runtime_contract.py  test_sentence_assembly.py  test_topic_collection_contract.py  test_topic_grouping_engine.py
(+36 files in other folders)
